# sl1m_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: sl1m_example_params.yaml  sl1m_talos.yaml
config/rviz/: demo_sl1m_ros.rviz
launch/: demo_sl1m_rbprm_ros.launch  demo_sl1m_ros.launch  footstep_planner.launch
src/: FootstepPlannerSl1m.py  sl1m_footstep_server.py  sl1m_wrapper_node.py
src/nodes/: footstep_planner_server  hpp_rbprm_server  sl1m_ros  surface_processing
src/sl1m_ros/: average_quaternion.py  sl1m_node.py  sl1m_params.py  sl1m_params_talos.py  surface_processing_node.py  visualization_tools.py
src/sl1m_ros.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_average_quaternion.py
