<?xml version="1.0"?>
<package format="2">
  <name>sl1m_ros</name>
  <version>0.0.0</version>
  <description>The sl1m ros package</description>

  <maintainer email="gsaurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>sl1m</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_msgs</depend>
    
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
